# DosGame

./: .gitignore  CMakeLists.txt  LICENSE  MAIN.C  MAKEFILE  Makefile  README.md  Toolchain-djgpp.cmake  bullet.pcx  count_level.cpp  count_level.h  crosscompile.sh  enemy.h  enemy_level.cpp  enemy_level.h  engine.cpp  engine.h  first_enemy.cpp  first_enemy.h  gm_state.c  gm_state.cpp  gm_state.h  image_utils.cpp  image_utils.h  level_holder.cpp  level_holder.h  logging.h  main.c  main.cpp  mikmod_sound.cpp  mikmod_sound.h  point.h  run_in_dosbox.conf  run_in_dosbox.sh  sprite.h  stageclearlevel.cpp  stageclearlevel.h  swing_level.cpp  swing_level.h  title_screen.cpp  (+1 more)
asset_sources/: LevelClear.xcf
gfx/: clear1.pcx  clear2.pcx  enemy.pcx  one.pcx  ship.pcx  space_bg.pcx  two.pcx
music/: test.xm  test2.xm  victory.xm
